[tool.poetry]
name = "flask-blipp"
version = "0.1.1"
description = ""
authors = ["colinlcrawford <ccolin84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
flask = "^3.1.0"
black = "^25.1.0"
pycodestyle = "^2.12"
pytest-cov = "^5.0"
coveralls = "^3.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
