[tool.poetry]
name = "flask-blipp"
version = "0.1.1"
description = ""
authors = ["colinlcrawford <ccolin84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^8.4"
flask = "^3.1.1"
black = "^25.9.0"
pycodestyle = "^2.14"
pytest-cov = "^5.0"
coveralls = "^3.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
